K8s-Infra/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bis-infra-ingress-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept,Pragma,Referer,Access-Control-Allow-Origin,Access-Control-Allow-Headers"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://uatbis.epicbrokers.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - hosts:
    - api.uatbis.epicbrokers.com
    secretName: aks-api-ingress-tls
  rules:
  - host: api.uatbis.epicbrokers.com
    http:
      paths:
      - backend:
          serviceName: bis-backend-core-app
          servicePort: 80
