K8s-Infra/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bis-infra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - uatbis.epicbrokers.com
    secretName: aks-ingress-tls
  rules:
  - host: uatbis.epicbrokers.com
    http:
      paths:
      - backend:
          serviceName: bis-frontend-app
          servicePort: 80
