K8s-Infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bis-infra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - devbis.epicbrokers.com
    secretName: tls-secret
  rules:
  - host: devbis.epicbrokers.com
    http:
      paths:
      - backend:
          serviceName: bis-frontend-app
          servicePort: 3456
